<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:id="@+id/main_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cool_teal"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="6dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:transitionName="bottomSheetTitle"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/localisation_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cool_teal"
            android:textSize="18sp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/localisation"/>

        <!--<androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:layout_marginVertical="1dp"
            android:text="@string/language"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:gravity="start"
            android:background="@color/white"></androidx.appcompat.widget.AppCompatButton>-->

        <LinearLayout
            android:id="@+id/automatic_translation_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/beta"
                android:textColor="@color/cool_teal"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/translation_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automatic_translation_setting"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/automatic_translation_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:textSize="15sp"
                android:layout_marginTop="2dp"
                android:text="@string/automatic_translation_description"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appearance_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/localisation_section">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cool_teal"
            android:textSize="18sp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/appearance"/>

        <!--<androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:layout_marginVertical="1dp"
            android:text="@string/language"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:gravity="start"
            android:background="@color/white"></androidx.appcompat.widget.AppCompatButton>-->

        <LinearLayout
            android:id="@+id/night_ride_mode_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="18dp">

            <Switch
                android:id="@+id/night_ride_mode_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_ride_mode"
                android:textSize="18sp"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/more_customization_settings_soon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/more_customization_coming_soon"
        android:textColor="@color/light_grey"
        android:paddingHorizontal="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>