<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/confirm_spot_add"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:textColor="@color/cool_teal"
                android:textStyle="bold"
                android:text="@string/no"
                android:textAllCaps="true"
                android:background="@color/transparent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_confirm"
                android:layout_width="55dp"
                android:textColor="@color/cool_teal"
                android:textStyle="bold"
                android:layout_height="40dp"
                android:text="@string/yes"
                android:background="@color/transparent"
                android:textAllCaps="true"
                android:layout_marginStart="6dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>