<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:id="@+id/main_background_delete_confirm">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/delete_account_dialog_content"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:textColor="@color/cool_teal"
                android:textStyle="bold"
                android:text="@string/no"
                android:textAllCaps="true"
                android:background="@color/transparent"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_yes"
                    android:layout_width="55dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/cool_teal"
                    android:textStyle="bold"/>

                <ProgressBar
                    android:id="@+id/loading_progress_bar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_ok"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:text="@string/ok"
                android:visibility="gone"
                android:layout_gravity="end"
                android:textAllCaps="true"
                android:textColor="@color/cool_teal"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>