<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/success_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/success_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/username_successfully_set"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:text="@string/ok"
            android:layout_gravity="end"
            android:textAllCaps="true"
            android:textColor="@color/cool_teal"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/enter_username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">


            <!--<androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:textColor="@color/cool_teal"
                android:textStyle="bold"
                android:text="@string/no"
                android:textAllCaps="true"
                android:background="@color/transparent"/>-->

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_confirm"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@color/transparent"
                    android:text="@string/confirm"
                    android:textAllCaps="true"
                    android:textColor="@color/cool_teal"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/loading_progress_bar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>