<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/main_background_feedback_dialog"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/feedback_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/feedback_title"/>

        <EditText
            android:id="@+id/feedback_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:maxHeight="0dp"
            android:layout_marginTop="10dp"
            android:hint="@string/describe_your_issue"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <TextView
            android:id="@+id/feedback_error_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/field_cannot_be_empty"
            android:fontFamily="sans-serif-medium"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_back_cool_teal_20"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/loading_feedback"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:indeterminateDrawable="@drawable/custom_progress_bar_white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>